--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,8 +1,8 @@
 project(Example)
 
-add_executable(Example main.cpp)
-
-include_directories(../include)
+add_executable(Example
+        main.cpp
+)
 
 target_link_libraries(Example
     CodeExecutor
